ajout des routes @Patch et @Delete users
